[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scripts/Player/WeaponController.gd" type="Script" id=2]
[ext_resource path="res://ITEMS/ItemIcons/Golden Staff.png" type="Texture" id=4]
[ext_resource path="res://Assets/Attacks/Slashes.png" type="Texture" id=5]
[ext_resource path="res://Scripts/Player/SwordHit.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Player/HitBox.tscn" type="PackedScene" id=7]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.65286
height = 13.9594

[sub_resource type="Animation" id=2]
length = 0.45
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("BowSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8 ]
}

[sub_resource type="Animation" id=3]
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("StaffSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ -45.0, -53.7, -45.0 ]
}

[sub_resource type="Animation" id=4]
length = 0.95
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("SwordSprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.00170891, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, 30.0, 50.0, 60.0, 80.0, 80.0, 80.0, 1.9, -58.8, -84.8, -119.5, -128.2, -128.2, -128.2, -110.9, -76.2, -41.5, -6.8, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwordSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordSprite:flip_h")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SwordSprite:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -16.7, -7 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HitBox:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 17.3, 34.6, 51.9, 60.6, 86.6, 86.6, 86.6, 8.5, -52.2, -69.5, -104.2, -121.5, -121.5, -121.5 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HitBox:monitorable")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.25, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("HitBox:monitoring")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.25, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("HitBox/CollisionShape2D:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.45, 0.55 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -11.3521, 0.271144 ), Vector2( -10.3828, 0.0786076 ), Vector2( -9.3897, 1.37841 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.95
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("SwordSprite:flip_h")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("SwordSprite:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ -10.0, -30.0, -50.0, -60.0, -80.0, -80.0, -80.0, -1.9, 58.8, 84.8, 119.5, 128.2, 128.2, 128.2, 110.9, 76.2, 41.5, 6.8, 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("SwordSprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 0,
"values": [  ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("SwordSprite:offset")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 3.7, -7 ), Vector2( 3.7, -7 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("HitBox:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 86.7, 69.4, 52.1, 43.4, 17.4, 17.4, 21.8, 95.5, 164.9, 190.9, 225.6, 234.3, 234.3, 234.3 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("HitBox/CollisionShape2D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1.98359, -10.9638 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("HitBox:monitoring")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.2, 0.65 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("HitBox:monitorable")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.2, 0.65 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=6]
resource_name = "consumeit"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("ConsumableSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( -0.1, 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -1 ), Vector2( 0, -2 ), Vector2( 0, -3 ), Vector2( 0, -4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EatingEffect:emitting")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.1, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0, 0.0231788, 0.480132 )
colors = PoolColorArray( 0.0221676, 0.300781, 0.0199738, 1, 0.433594, 0.335358, 0.0406494, 1, 0.304688, 0.160842, 0.0214233, 1 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0.520455 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=10]
curve = SubResource( 9 )

[sub_resource type="ParticlesMaterial" id=11]
emission_shape = 1
emission_sphere_radius = 3.0
flag_disable_z = true
direction = Vector3( 0, 0, 0 )
spread = 42.48
gravity = Vector3( 0, 60, 0 )
initial_velocity = 16.0
angular_velocity = 70.49
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 607.6
scale = 2.0
scale_random = 1.0
scale_curve = SubResource( 10 )
color_ramp = SubResource( 8 )

[node name="WeaponController" type="Node2D"]
script = ExtResource( 2 )

[node name="HitBox" parent="." instance=ExtResource( 7 )]
visible = false
rotation = -2.12057
monitoring = false
monitorable = false
collision_mask = 8
script = ExtResource( 6 )

[node name="CollisionShape2D" parent="HitBox" index="0"]
position = Vector2( -9.3897, 1.37841 )
rotation = -0.909317
z_index = 7
shape = SubResource( 1 )

[node name="StaffSprite" type="Sprite" parent="."]
visible = false
rotation = -0.785398
texture = ExtResource( 4 )
offset = Vector2( -4, -6 )

[node name="SwordSprite" type="Sprite" parent="."]
position = Vector2( -1.0004, -0.738641 )
z_index = 1
centered = false
offset = Vector2( -16.7, -7 )
flip_h = true

[node name="BowSprite" type="Sprite" parent="."]
position = Vector2( -0.0385323, 0.0145473 )
rotation = 0.762709
centered = false
offset = Vector2( -5, -11 )
hframes = 9
frame = 4

[node name="ConsumableSprite" type="Sprite" parent="."]
position = Vector2( 0, -4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ArrowSent = SubResource( 2 )
anims/MagicSent = SubResource( 3 )
anims/SwordAttackLeft = SubResource( 4 )
anims/SwordAttackRight = SubResource( 5 )
anims/consumeit = SubResource( 6 )

[node name="Slash" type="Sprite" parent="."]
position = Vector2( -8.21241, -2.26987 )
rotation = 0.549779
scale = Vector2( 0.907687, 1 )
texture = ExtResource( 5 )
flip_h = true
flip_v = true
vframes = 2
hframes = 7
frame = 13

[node name="EatingEffect" type="Particles2D" parent="."]
position = Vector2( 6.30536, -1.02617 )
emitting = false
lifetime = 0.3
speed_scale = 0.6
randomness = 1.0
process_material = SubResource( 11 )
[connection signal="area_entered" from="HitBox" to="." method="_on_HitBox_area_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]

[editable path="HitBox"]
